--- a/main.css
+++ b/main.css
@@ -19,14 +19,15 @@ logo
 padding-top: 10px;
 }
 .nav-wrapper{
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
 .navigation{
   font-size: 15px;
-  font-weight: 600;
-  padding-top: 15px;
+  font-weight: 300;
+  padding-top: 10px;
   padding-left: 15px;
+  padding-bottom: 20px;
 }
 .navigation__link{
   color:#163a57;
@@ -62,7 +63,7 @@ padding-top: 10px;
 header
 ***************/
 .header{
-  height:600px;
+  height:700px;
   overflow: hidden;
   background-color: #010101;
   -webkit-align-items: center;
@@ -74,7 +75,7 @@ header
 .header__bg{
   overflow: hidden;
   float: right;
-  width: 50%;
+  width: 45%;
   background-color: #272532;
 }
 .header__content{
@@ -87,9 +88,10 @@ header
   font-size: 35px;
   font-weight: bolder;
   line-height: 1.25;
-  margin-top:150px;
+  margin-top:250px;
 }
 .header__description{
+  font-family: 'Lora', serif;
   color:white;
   font-size:35px;
   font-weight: 300;
@@ -97,7 +99,7 @@ header
 }
 .header__botton{
   font-family: 'Lora', serif;
-  margin-top: 150px;
+  margin-top: 140px;
   background:#b0191e;
   color:white;
   font-size:20px;
@@ -116,4 +118,39 @@ header
   text-decoration: none;
   color: #010101;
   box-shadow: 0px 5px 30px 0px rgba(31,35,37,0.4);
+}
+/*******************
+TITLE
+******************/
+.section{
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.title{
+  font-size: 35px;
+  color: rgb(233, 19, 73);
+  font-family: 'Lora', serif;
+  margin-bottom: 10px;
+  text-align: center;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.card{  
+  text-align: center;
+  font-family: 'Lora', serif;
+  margin-bottom: 50px;
+}
+.card__image{
+  margin-top: 100px;
+  margin-bottom: 20px;
+}
+.card__title{ 
+  color: #222;
+  font-size: 18px;  
+  font-weight: 600;
+  margin-bottom: 5px ;
+}
+.card__price{
+  font-size: 13px;
+  color: #d12026;
 }
